# bumblebob

./: README.md
bumblebob_lateral_controller/: CMakeLists.txt  README.md
bumblebob_lateral_controller/config/: Dynamic.cfg  config.yaml
bumblebob_lateral_controller/include/: feedback.hpp  feedforward.hpp
bumblebob_lateral_controller/launch/: lat_kin.launch
bumblebob_lateral_controller/scripts/: race.csv
bumblebob_lateral_controller/src/: feedback.cpp  main.cpp
bumblebob_lateral_controller/src/bumblebob_lateral_controller/: package.xml
bumblebob_lateral_controller/src/bumblebob_lateral_controller/include/: car_constants.hpp  lateral_kinematic_ROS_node.hpp
bumblebob_lateral_controller/src/bumblebob_lateral_controller/launch/: lat_kin_simulation.launch  load_params.launch
bumblebob_lateral_controller/src/bumblebob_lateral_controller/scripts/: display_csv_data.py
bumblebob_lateral_controller/src/bumblebob_lateral_controller/src/: car_constants.cpp  feedforward.cpp  lateral_kinematic_ROS_node.cpp
bumblebob_lateral_controller/src/bumblebob_lateral_controller/test/: test_feedback.cpp  test_feedforward.cpp  test_feedforward.test
bumblebob_lateral_controller/test/: test_feedback.test
bumblebob_lateral_lq_controller/: CMakeLists.txt  README.md  package.xml  setup.py
bumblebob_lateral_lq_controller/config/: Dynamic.cfg  lq_config.yaml
bumblebob_lateral_lq_controller/doc/: RELEASE_NOTES.txt  lq_control_data.csv  raceline.csv
bumblebob_lateral_lq_controller/launch/: lateral_lqr_controller_node.launch  launch_surroundings.launch
bumblebob_lateral_lq_controller/scripts/: display_csv_data.py
bumblebob_lateral_lq_controller/src/bumblebob_lateral_lq_controller/: control.py  helpers.py  lateral_lqr_controller_node.py  least_square_circle.py  lqr.py
bumblebob_lateral_lq_controller/tests/: lateral_lqr_controller_node.test  test_lateral_lqr_controller_node.py
bumblebob_navigation/: CMakeLists.txt  package.xml
bumblebob_navigation/config/: config.yaml
bumblebob_navigation/include/: simulation_line_node.hpp
bumblebob_navigation/launch/: launch_visualization.launch  load_params.launch
bumblebob_navigation/scripts/: lane_visualizer_node.py  race_line_node.cpp  simulation_line_node.cpp
bumblebob_navigation/src/: raceline.cpp  raceline.hpp  splines.cpp  splines.hpp
bumblebob_navigation/test/: test_raceline.cpp  test_raceline.test  test_splines.cpp  test_splines.test
bumblebob_pathfinder/: CMakeLists.txt  package.xml
bumblebob_pathfinder/alternate_impl/include/: mesh.hpp  path.hpp  pathfinder.hpp  pathfinder_node.hpp
bumblebob_pathfinder/alternate_impl/src/: main.cpp  mesh.cpp  pathfinder.cpp  pathfinder_node.cpp
bumblebob_pathfinder/config/: Pathfinder.cfg  pathfinder.yaml
bumblebob_pathfinder/include/: PathfinderCore.hpp  PathfinderHelper.hpp  PathfinderNode.hpp  Visualizer.hpp  delaunator.hpp  delaunator.hpp_vanilla
bumblebob_pathfinder/launch/: pathfinder.launch
bumblebob_pathfinder/scripts/: pathfinder_tester.py  send_test_msgs.py
bumblebob_pathfinder/scripts/TestTracks/: edgecase_not_a_triangulation_exception.csv  handling_track.csv  simple.csv  simple_turn_right.csv  test_track.csv
bumblebob_pathfinder/src/: PathfinderCore.cpp  PathfinderHelper.cpp  PathfinderNode.cpp  Visualizer.cpp  main.cpp
bumblebob_pure_pursuit/: CMakeLists.txt  package.xml
bumblebob_pure_pursuit/config/: accel.yaml  default.yaml
bumblebob_pure_pursuit/include/bumblebob_pure_pursuit/: PurePursuitNode.hpp
bumblebob_pure_pursuit/launch/: pure_pursuit.launch
bumblebob_pure_pursuit/src/: PurePursuitNode.cpp
bumblebob_raceline_calculator/: CMakeLists.txt  README.md  package.xml
bumblebob_raceline_calculator/config/: config.yaml
bumblebob_raceline_calculator/include/: raceline_calculator_node.hpp  raceline_optimizer.hpp  states_calculations.hpp  velocity_profile.hpp
bumblebob_raceline_calculator/launch/: raceline_optimizer.launch
bumblebob_raceline_calculator/scripts/: display_csv_data.py  send_test_msg.cpp
bumblebob_raceline_calculator/src/: main.cpp  raceline_calculator_node.cpp  raceline_optimizer.cpp  states_calculations.cpp  velocity_profile.cpp
